--- a/ec2.yaml
+++ b/ec2.yaml
@@ -5,3 +5,6 @@ Resources:
       AvailabilityZone: us-east-1a
       ImageId: ami-0742b4e673072066f
       InstanceType: t2.micro
+      Tags: 
+        - Key: "Name"
+          Value: "Aakash"
