--- a/waf.yaml
+++ b/waf.yaml
@@ -183,7 +183,24 @@ Resources:
               SearchString: python
               TextTransformations:
                 - Priority: 1
-                  Type: NONE  
+                  Type: NONE
+        - Name: RuleThree
+          Priority: 3
+          Action:
+            Count:{}
+            VisibilityConfig:
+              SampledRequestsEnabled: true
+              CloudWatchMetricsEnabled: true
+              MetricName: RuleThreeMetric
+            Statement:
+              ByteMatchStatement:
+                FieldToMatch:
+                  Body: {}
+                PositionalConstraint: CONTAINS
+                SearchString: RegionOne
+                TextTransformations:
+                  - Priority: 0
+                    Type: HTML_ENTITY_DECODE
   WebACLAssociation:
     Condition: AssociatedResourceProvided
     Type: 'AWS::WAFv2::WebACLAssociation'
