--- a/waf.yaml
+++ b/waf.yaml
@@ -185,19 +185,23 @@ Resources:
                 - Priority: 1
                   Type: NONE
         - Name: RuleThree
-          Priority: 2
+          Priority: 3
           Action:
-            Count:{}
+            Block:
+              CustomResponse:
+                ResponseCode: 429
+                CustomResponseBodyKey: RateLimitedResponse
           VisibilityConfig:
             SampledRequestsEnabled: true
             CloudWatchMetricsEnabled: true
-            MetricName: RuleThreeMetric
+            MetricName: RuleTwoMetric
           Statement:
             ByteMatchStatement:
               FieldToMatch:
-                Body: {}
+                SingleHeader:
+                  Name: haystack
               PositionalConstraint: CONTAINS
-              SearchString: RegionOne
+              SearchString: python
               TextTransformations:
                 - Priority: 1
                   Type: NONE
