Changed a rule little nit

--- a/waf.yaml
+++ b/waf.yaml
@@ -216,29 +216,29 @@ Resources:
             SampledRequestsEnabled: true
             CloudWatchMetricsEnabled: true
             MetricName: Rate_Limit_Ordermark
-          Statement:
-            RateBasedStatement:
-              Limit: 100
-              AggregateKeyType: IP
-              ScopeDownStatements:
-                - ByteMatchStatement:
-                    FieldToMatch:
-                      SingleHeader:
-                        Name: host
-                    PositionalConstraint: CONTAINS
-                    SearchString : ordermark-api.esper.cloud
-                    TextTransformations:
-                      - Priority: 0
-                        Type: NONE
-                - ByteMatchStatement:
-                    FieldToMatch:
-                      SingleHeader:
-                        Name: host
-                    PositionalConstraint: CONTAINS
-                    SearchString : ordermark-api.esper.cloud
-                    TextTransformations:
-                      - Priority: 0
-                        Type: NONE
+          Statements:
+            - RateBasedStatement:
+                Limit: 100
+                AggregateKeyType: IP
+                ScopeDownStatements:
+                  - ByteMatchStatement:
+                      FieldToMatch:
+                        SingleHeader:
+                          Name: host
+                      PositionalConstraint: CONTAINS
+                      SearchString : ordermark-api.esper.cloud
+                      TextTransformations:
+                        - Priority: 0
+                          Type: NONE
+            - AndStatement:
+                FieldToMatch:
+                  SingleHeader:
+                    Name: user-agent
+                  PositionalConstraint: CONTAINS
+                  SearchString : python
+                  TextTransformations:
+                    - Priority: 0
+                      Type: NONE
   WebACLAssociation:
     Condition: AssociatedResourceProvided
     Type: 'AWS::WAFv2::WebACLAssociation'
