changed yaml formatted it

--- a/waf.yaml
+++ b/waf.yaml
@@ -217,7 +217,7 @@ Resources:
             CloudWatchMetricsEnabled: true
             MetricName: Rate_Limit_Ordermark
           Statement:
-            AndStement:
+            AndStatement:
               Statements:
                 - RateBasedStatement:
                     Limit: 100
