--- a/waf.yaml
+++ b/waf.yaml
@@ -221,15 +221,26 @@ Resources:
                 Limit: 100
                 AggregateKeyType: IP
                 ScopeDownStatement:
-                  ByteMatchStatement:
-                    FieldToMatch:
-                      SingleHeader:
-                        Name: host
-                    PositionalConstraint: CONTAINS
-                    SearchString : "ordermark-api.esper.cloud"
-                    TextTransformations:
-                      - Priority: 0
-                        Type: NONE
+                  AndStatement:
+                     Statements:
+                       - ByteMatchStatement:
+                           FieldToMatch:
+                             SingleHeader:
+                               Name: host
+                           PositionalConstraint: CONTAINS
+                           SearchString : "ordermark-api.esper.cloud"
+                           TextTransformations:
+                             - Priority: 0
+                               Type: NONE
+                       - ByteMatchStatement:
+                           FieldToMatch:
+                             SingleHeader:
+                               Name: user-agent
+                           PositionalConstraint: CONTAINS
+                           SearchString : "python"
+                           TextTransformations:
+                             - Priority: 0
+                               Type: NONE
   WebACLAssociation:
     Condition: AssociatedResourceProvided
     Type: 'AWS::WAFv2::WebACLAssociation'
