Added a new resource part

--- a/waf.yaml
+++ b/waf.yaml
@@ -211,7 +211,6 @@ Resources:
 #                - Priority: 1
 #                  Type: NONE
         - Name: Rate_Limit_Ordermark
-          Condition: CreateRuleForNcal1
           Priority: 4
           Action:
             Block:
@@ -256,7 +255,54 @@ Resources:
         Fn::GetAtt: WAFWebACL.Arn
       ResourceArn: !Ref AssociatedResourceArn 
 
-
+  WAFWebACL:
+    Type: 'AWS::WAFv2::WebACL'
+    Condition: HttpFloodProtectionRateBasedRuleActivated
+    Condition: CreateRuleForNcal1
+    Properties:
+      Name: !Join ['-', [!Ref 'AWS::StackName', WebACL, !Ref 'AWS::Region']]
+      Scope: !FindInMap ["ACLScope", !Ref EndpointType, "Value"]
+      Description: WebACL created with cloudformation template
+      DefaultAction:
+        Allow: {}
+      CustomResponseBodies:
+        RateLimitedResponse:
+          ContentType: APPLICATION_JSON
+          Content: '{"message": "Too Many Requests! Rate-limited by WAF."}'
+      VisibilityConfig:
+        SampledRequestsEnabled: true
+        CloudWatchMetricsEnabled: true
+        MetricName: !Join ['-', [!Ref 'AWS::StackName', WebACL, !Ref 'AWS::Region', DefaultRule]]
+      Rules:
+        - Name: RateLimitRule
+          Priority: 0
+          Action:
+            !If
+              - RateLimitRuleCountEnabled
+              - Count: {}
+              -
+                Block:
+                  CustomResponse:
+                    ResponseCode: 429
+                    CustomResponseBodyKey: RateLimitedResponse
+          VisibilityConfig:
+            SampledRequestsEnabled: true
+            CloudWatchMetricsEnabled: true
+            MetricName: !Join ['-', [!Ref 'AWS::StackName', WebACL, !Ref 'AWS::Region', RateBasedRule]]
+          Statement:
+            RateBasedStatement:
+              Limit: !Ref RequestThreshold
+              AggregateKeyType: IP
+  
+  WebACLAssociation:
+    Condition: AssociatedResourceProvided
+    Type: 'AWS::WAFv2::WebACLAssociation'
+    DependsOn: WAFWebACL
+    Properties:
+      WebACLArn:
+        Fn::GetAtt: WAFWebACL.Arn
+      ResourceArn: !Ref AssociatedResourceArn
+ 
 Outputs:
 
   # WAFWebACL:
