--- a/waf.yaml
+++ b/waf.yaml
@@ -118,7 +118,7 @@ Conditions:
     - 'Count'
 
   CreateRuleForNcal1: !Equals 
-  - !Ref stackName 
+  - !Ref 'AWS::StackName'
   - 'TestStack2'
 
 
