--- a/waf.yaml
+++ b/waf.yaml
@@ -119,7 +119,7 @@ Conditions:
 
   CreateRuleForNcal1: !Equals 
   - !Ref 'AWS::StackName'
-  - 'WAF-TestStack1'
+  - 'WAF-TestStack'
 
 
 Mappings:
